# ECERIA

./: Animation.c  Animation.h  Biome.c  Biome.h  CMakeLists.txt  Carte.c  Carte.h  Constantes.h  GestionDonnees.c  GestionDonnees.h  GestionDonnees.txt  Inventaire.c  Inventaire.h  Jeu.c  Jeu.h  Jeu.txt  Joueur.c  Joueur.h  Joueur.txt  Maison.c  Maison.h  Menu.c  Menu.h  Menu.txt  Objets.c  Objets.h  PNJ.c  PNJ.h  README.md  main.c
Save/: biome.txt  inventaire.txt  joueur.txt  map.txt
Save/pattern/: maison_0.txt  maison_1.txt
